# docstring-adder

./: .gitignore  .pre-commit-config.yaml  README.md  add_docstrings.py  pyproject.toml
.github/: actionlint.yml  renovate.json5
.github/scripts/: typeshed_primer_download_diff.js  typeshed_primer_download_errors.js  typeshed_primer_post_comment.js  typeshed_third_party.py
.github/workflows/: check.yaml  typeshed_primer.yml  typeshed_primer_comment.yml
tests/: test_main.py  test_safety.py  test_transform.py
